api-gateway/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foober-api-gateway
  template:
    metadata:
      name: api-gateway
      labels:
        app: foober-api-gateway
    spec:
      containers:
        - image: miksamixa/foober-api-gateway:v1
          name: api-gateway
          resources:
            requests:
              cpu: 100m
              memory: 200M
            limits:
              cpu: 200m
              memory: 200M
          ports:
            - containerPort: 3000
