api-gateway/k8s/service.yaml
# services are not needed for Moleculer to work
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: NodePort
  selector:
    app: foober-api-gateway
  ports:
  - port: 80
    targetPort: 3000
