api-gateway/k8s/ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "api"
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: "foober-managed-cert"
spec:
  rules:
    - host: foober.mihajlo.dev
      http:
        paths:
          - backend:
              serviceName: api-gateway
              servicePort: 80
